--- a/CQ 24.2
+++ b/CQ 24.2
@@ -37,3 +37,49 @@ class MyClass {
 Constructor này có hai tham số, `name` và `age`. Nó khởi tạo hai thuộc tính của đối tượng bằng các giá trị của các tham số đó.
 
 Constructor có thể được sử dụng để khởi tạo các đối tượng của lớp đó theo nhiều cách khác nhau. Việc sử dụng constructor nào phụ thuộc vào nhu cầu cụ thể của ứng dụng.
+
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Danh sách gói cước Internet Viettel</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>DANH SÁCH GÓI INTERNET</h1>
+        <p>Xem tất cả</p>
+    </header>
+    <section class="gói-cước">
+        <div class="gói-cước__item">
+            <h2>HOMET</h2>
+            <p>100Mbps</p>
+            <p>- Áp dụng tại 61 tỉnh (trừ HNI và HCM)</p>
+            <p>- Phù hợp với cá nhân, hộ gia đình có nhu cầu kết nối internet cơ bản</p>
+            <p><a href="#">Chi tiết gói cước</a></p>
+        </div>
+        <div class="gói-cước__item">
+            <h2>STAR1H</h2>
+            <p>150Mbps+1 Hotline</p>
+            <p>- Áp dụng tại nội thành Hà Nội, TP Hồ Chí Minh</p>
+            <p>- Phù hợp với khách hàng có nhu cầu mở rộng vùng phủ sóng wifi</p>
+            <p><a href="#">Chi tiết gói cước</a></p>
+        </div>
+        <div class="gói-cước__item">
+            <h2>SUN1T</h2>
+            <p>150Mbps</p>
+            <p>- Áp dụng tại 61 Tỉnh và ngoại thành Hà Nội, TP Hồ Chí Minh</p>
+            <p>- Phù hợp với cá nhân, hộ gia đình có nhu cầu sử dụng internet tốc độ cao</p>
+            <p><a href="#">Chi tiết gói cước</a></p>
+        </div>
+        <div class="gói-cước__item">
+            <h2>SUN2T</h2>
+            <p>250Mbps</p>
+            <p>- Áp dụng tại 61 Tỉnh và ngoại thành Hà Nội, TP Hồ Chí Minh</p>
+            <p>- Phù hợp với cá nhân, hộ gia đình có nhu cầu sử dụng internet tốc độ cao</p>
+            <p><a href="#">Chi tiết gói cước</a></p>
+        </div>
+    </section>
+</body>
+</html>
