--- a/CQ 24.2
+++ b/CQ 24.2
@@ -165,3 +165,23 @@ marquee.style.animation = 'marquee 10s linear infinite';
 }
 </script>
 
+#marquee {
+  width: 100%;
+  height: 30px;
+  background-color: #ccc;
+  border: 1px solid #ddd;
+  padding: 5px;
+
+  animation: marquee 10s linear infinite;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+
